k8s/refark-authentication-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: refark-authentication
  name: refark-authentication
  namespace: refark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: refark-authentication
  template:
    metadata:
      labels:
        app: refark-authentication
    spec:
      containers:
        - name: refarkauthentication
          image: okq8ark.azurecr.io/refarkauthentication:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            protocol: TCP
