k8s/refark-car-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: refark-car
  name: refark-car
  namespace: refark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: refark-car
  template:
    metadata:
      labels:
        app: refark-car
    spec:
      containers:
        - name: refarkcar
          image: okq8ark.azurecr.io/refarkcar:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            protocol: TCP
