k8s/refark-customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: refark-customer
  name: refark-customer
  namespace: refark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: refark-customer
  template:
    metadata:
      labels:
        app: refark-customer
    spec:
      containers:
        - name: refarkcustomer
          image: okq8ark.azurecr.io/refarkcustomer:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
            protocol: TCP
