k8s/refark-authentication-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: refark-authentication
  namespace: refark
spec:
  type: LoadBalancer
  selector:
    app: refark-authentication
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
