k8s/refark-car-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: refark-car
  namespace: refark
spec:
  type: LoadBalancer
  selector:
    app: refark-car
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
