k8s/refark-customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: refark-customer
  namespace: refark
spec:
  type: LoadBalancer
  selector:
    app: refark-customer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
