k8s/refark-payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: refark-payment
  namespace: refark
spec:
  type: LoadBalancer
  selector:
    app: refark-payment
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
