k8s/refark-product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: refark-product
  namespace: refark
spec:
  type: LoadBalancer
  selector:
    app: refark-product
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
