k8s/refark-station-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: refark-station-ingress
  namespace: refark
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: refark-station
            port:
              number: 80
